--- a/.github/workflows/create_container_docker_aws_ec2.yml
+++ b/.github/workflows/create_container_docker_aws_ec2.yml
@@ -46,9 +46,29 @@ jobs:
 
               sudo docker build -t ${{ github.event.repository.name }} .
               echo "build container"
-              #sudo docker run --name container_${{ github.event.repository.name }} -d  ${{ github.event.repository.name }} -p 80:80
-              #sudo docker run -d  ${{ github.event.repository.name }} -p ${{ secrets.APP_PORT }}:${{ secrets.APP_PORT }}
-              sudo docker run -d -p ${{ secrets.APP_PORT }}:${{ secrets.APP_PORT }} ${{ github.event.repository.name }} 
+              
+              
+              #docker run --name container_${{ github.event.repository.name }} --rm \
+              #-p 80:80 \
+              #-ti {{ github.event.repository.name }} \
+              #watch "date >> /var/log/date.log"
+              docker run -d --name container_${{ github.event.repository.name }} ${{ github.event.repository.name }} watch "date >> /var/log/date.log"
+              #sudo docker run -d -p ${{ secrets.APP_PORT }}:${{ secrets.APP_PORT }} ${{ github.event.repository.name }} 
               echo "run container"
 
               #sudo docker exec –it container_${{ github.event.repository.name }} /bin/bash
+              #sudo  docker run -d -p 3000:3000 demo_cms_rails
+              #docker run --name pandora_community --rm \
+              #-p 8085:80 \
+              #-p 41121:41121 \
+              #-p 162:162 \
+              #-e DBHOST=mysqlhost.local \
+              #-e DBNAME=pandora \
+              #-e DBUSER=pandora \
+              #-e DBPASS=pandora \
+              #-e DBPORT=3306 \
+              #-e SLEEP=5 \
+              #-e RETRIES=3 \
+              #-e INSTANCE_NAME=pandora_community \
+              #-ti rameijeiras/pandorafms-community:740
+              #docker run -d --name container-name alpine watch "date >> /var/log/date.log"
